# cablecat

./: .gitignore  LICENSE  Makefile  README.md  apps.json  cablecat
lemmy/: Makefile  lemmy_tui.py  pyproject.toml
wiki/: Makefile  README.md  WIKIM_README.md  cablecat-cleanup.service  cablecat-cleanup.sh  cablecat-cleanup.timer  cablecat.conf  cablecat_jump.cgi  postinst  prerm  rewrite_links.py  view.sh  wiki-download.sh  wiki-search.sh  wiki-selector.sh  wiki.sh  wikim.sh  wikim_selector.sh
wiki/debian/DEBIAN/: conffiles  control
